feat(Analyticts): Add endpoints for analytics
